[gd_scene load_steps=3 format=3 uid="uid://b12q7234bewux"]

[ext_resource type="Script" uid="uid://blfxy7txct8lx" path="res://scenes/main_game/game_over_popup.gd" id="1_5l5ej"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5l5ej"]
bg_color = Color(0.1, 0.02, 0.02, 0.98)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(1, 0, 0, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25
shadow_color = Color(1, 0, 0, 0.6)
shadow_size = 15

[node name="GameOverPopup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5l5ej")

[node name="Overlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0, 0, 0.98)
metadata/_edit_lock_ = true

[node name="GameOverContainer" type="Panel" parent="."]
custom_minimum_size = Vector2(700, 300)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -150.0
offset_right = 350.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_5l5ej")

[node name="GameOverLabel" type="Label" parent="GameOverContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -204.5
offset_top = 40.0
offset_right = 204.5
offset_bottom = 107.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 5
theme_override_font_sizes/font_size = 48
text = "ðŸ’€ GAME OVER! ðŸ’€"
horizontal_alignment = 1

[node name="FailureLabel" type="Label" parent="GameOverContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -269.0
offset_top = -15.5
offset_right = 269.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 3
theme_override_font_sizes/font_size = 22
text = "You reached round %s before failing the challenge!"
horizontal_alignment = 1

[node name="ExitLabel" type="Label" parent="GameOverContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -167.5
offset_top = -100.0
offset_right = 167.5
offset_bottom = -69.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 2
theme_override_font_sizes/font_size = 18
text = "Returning to title in 3 seconds..."
horizontal_alignment = 1
